pracaInz/force-app/main/default/objects/Company_Product__c/Company_Product__c.object-meta.xml
<CustomObject>
    <label>Company Product</label>
    <nameField>
        <label>Company Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>