pracaInz/force-app/main/default/objects/Company_Product__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>