pracaInz/force-app/main/default/objects/Company_Product__c/fields/Packaging_weight__c.field-meta.xml
<CustomField>
    <fullName>Packaging_weight__c</fullName>
    <label>Packaging weight</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>125g</fullName>
            </value>
            <value>
                <fullName>250g</fullName>
            </value>
            <value>
                <fullName>500g</fullName>
            </value>
            <value>
                <fullName>1kg</fullName>
            </value>
            <value>
                <fullName>2kg</fullName>
            </value>
            <value>
                <fullName>5kg</fullName>
            </value>
            <value>
                <fullName>10kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>