pracaInz/force-app/main/default/objects/Company_Product__c/fields/Pallet_type__c.field-meta.xml
<CustomField>
    <fullName>Pallet_type__c</fullName>
    <label>Pallet type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pallet_types</valueSetName>
    </valueSet>
</CustomField>