pracaInz/force-app/main/default/objects/Company_Product__c/fields/Product_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Product_Characteristics__c</fullName>
    <label>Product Characteristics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>