pracaInz/force-app/main/default/objects/Company_Product__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <label>Quality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Extremely High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Above Average</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Extremely Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>