pracaInz/force-app/main/default/objects/Company_Product__c/fields/Transportation_Requirements_ENG__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Requirements_ENG__c</fullName>
    <label>Transportation Requirements (ENG)</label>
    <type>TextArea</type>
</CustomField>